<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/weatherCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        card_view:cardElevation="5dp">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/todayDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:gravity="center"
                    android:text="@string/dateFormat"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" >
                </TextView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/emptyLabel"
                    android:text="" >
                </TextView>

                <TextView
                    android:id="@+id/dayLabel"
                    android:text="@string/day"
                    android:textStyle="bold"
                    android:typeface="serif" >
                </TextView>

                <TextView
                    android:id="@+id/nightLabel"
                    android:text="@string/night"
                    android:textStyle="bold"
                    android:typeface="serif" >
                </TextView>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/conditions"
                    android:text=" "
                    android:textStyle="bold" >
                </TextView>

                <ImageView
                    android:id="@+id/dayIcon" >
                </ImageView>

                <ImageView
                    android:id="@+id/nightIcon">
                </ImageView>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/temperatureLabel"
                    android:text="@string/temperature"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/dayTemperature"
                    android:gravity="center_horizontal"
                    android:text="@string/celsium" >
                </TextView>

                <TextView
                    android:id="@+id/nightTemperature"
                    android:gravity="center_horizontal"
                    android:text="@string/celsium" >
                </TextView>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/prProbability"
                    android:text="@string/prProbability"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/dayPrecipitation"
                    android:gravity="center_horizontal"
                    android:text="@string/percent" >
                </TextView>

                <TextView
                    android:id="@+id/nightPrecipitation"
                    android:gravity="center_horizontal"
                    android:text="@string/percent" >
                </TextView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/wind"
                    android:text="@string/wind"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/dayWind"
                    android:gravity="center_horizontal"
                    android:text="@string/ms" >
                </TextView>

                <TextView
                    android:id="@+id/nightWind"
                    android:gravity="center_horizontal"
                    android:text="@string/ms" >
                </TextView>
            </TableRow>



        </TableLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
